[ADD] ACSCipherConfiguration