@@ -30,13 +30,6 @@ import java.util.Base64;
 
 public class CipherService {
 
-    private final ObjectMapper objectMapper;
-    @Value("${QRACS.private.key}")
-    private String privateKey;
-    @Value("${QRACS.public.key}")
-    private String publicKey;
-
-
     public String encode(String messageToEncode) throws NoSuchAlgorithmException, InvalidKeySpecException, NoSuchPaddingException, IllegalBlockSizeException, BadPaddingException, InvalidKeyException, IOException {
 
         Cipher encryptCipher = Cipher.getInstance("RSA");
@@ -69,7 +62,7 @@ public class CipherService {
 
     public PrivateKey readPrivateKey() throws NoSuchAlgorithmException, IOException, InvalidKeySpecException {
         File privateKey = new File("private.key");
-        byte[] privateKeyBytes = Files.readAllBytes(privateKey.toPath());
+        byte[] privateKeyBytes = DatatypeConverter.parseHexBinary(Files.readString(privateKey.toPath()));
 
         KeyFactory keyFactory = KeyFactory.getInstance("RSA");
         EncodedKeySpec privateKeySpec = new PKCS8EncodedKeySpec(privateKeyBytes);
